--- a/index.html
+++ b/index.html
@@ -94,14 +94,37 @@
       </li>
     </ul>
     <div class="footer">
-      Todo: <span id="todo-count">1</span> •
+      Todo: <span id="todo-count">0</span> •
       Done: <span id="completed-count">0</span> •
-      Total: <span id="total-count">1</span>
+      Total: <span id="total-count">0</span>
     </div>
   </div>
 
   <script>
-  	// JavaScript code comes here...
+    // // select element containing the count
+    // var totalCount = document.getElementById('total-count');
+    // // count the number of todos by their class name
+    // var totalTodos = document.getElementsByClassName("todo").length;
+    // // update the HTML inside the counter element
+    // totalCount.innerHTML = totalTodos;
+
+    function updateCounters() {
+  // Total number of todos
+  var totalCount = document.getElementById('total-count');
+  var totalTodos = document.getElementsByClassName("todo").length;
+  totalCount.innerHTML = totalTodos;
+
+  // Total number of completed todos
+  var completedCount = document.getElementById('completed-count');
+  var completedTodos = document.getElementsByClassName("completed").length;
+  completedCount.innerHTML = completedTodos;
+
+  // Total number of uncompleted todos
+  var todoCount = document.getElementById('todo-count');
+  var uncompletedTodos = totalTodos - completedTodos;
+  todoCount.innerHTML = uncompletedTodos;
+}
+    updateCounters();
   </script>
 
 </body>
