--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
   <div class="container">
     <h1>TodoList</h1>
 
-    <form>
+    <form onSubmit="submitTodo(); return false">
       <input type="text" id="new-todo" placeholder="What needs to be done?">
     </form>
 
     <ul id="todolist">
-      <li class="todo">
-        <input id="todo-1" type="checkbox">
+      <li class="todo completed">
+        <input id="todo-1" type="checkbox" onChange="toggleDone.bind(this)();" checked="checked">
         <label for="todo-1">Sweep the floor</label>
       </li>
       <li class="todo completed">
-        <input id="todo-2" type="checkbox" checked>
+        <input id="todo-2" type="checkbox" onChange="toggleDone.bind(this)();" checked="checked">
         <label for="todo-2">Dust the vases</label>
       </li>
     </ul>
@@ -101,30 +101,87 @@
   </div>
 
   <script>
-    // // select element containing the count
-    // var totalCount = document.getElementById('total-count');
-    // // count the number of todos by their class name
-    // var totalTodos = document.getElementsByClassName("todo").length;
-    // // update the HTML inside the counter element
-    // totalCount.innerHTML = totalTodos;
 
     function updateCounters() {
-  // Total number of todos
-  var totalCount = document.getElementById('total-count');
-  var totalTodos = document.getElementsByClassName("todo").length;
-  totalCount.innerHTML = totalTodos;
+      // Total number of todos
+      var totalCount = document.getElementById('total-count');
+      var totalTodos = document.getElementsByClassName("todo").length;
+      totalCount.innerHTML = totalTodos;
 
-  // Total number of completed todos
-  var completedCount = document.getElementById('completed-count');
-  var completedTodos = document.getElementsByClassName("completed").length;
-  completedCount.innerHTML = completedTodos;
+      // Total number of completed todos
+      var completedCount = document.getElementById('completed-count');
+      var completedTodos = document.getElementsByClassName("completed").length;
+      completedCount.innerHTML = completedTodos;
 
-  // Total number of uncompleted todos
-  var todoCount = document.getElementById('todo-count');
-  var uncompletedTodos = totalTodos - completedTodos;
-  todoCount.innerHTML = uncompletedTodos;
-}
+      // Total number of uncompleted todos
+      var todoCount = document.getElementById('todo-count');
+      var uncompletedTodos = totalTodos - completedTodos;
+      todoCount.innerHTML = uncompletedTodos;
+    }
     updateCounters();
+
+    function toggleDone() {
+      var checkbox = this;
+
+      // check the checked status of the checkbox
+      if (checkbox.checked) {
+        // the "completed" class is set on the parent element, the <li>
+        checkbox.parentElement.className = "todo completed";
+      } else {
+        checkbox.parentElement.className = "todo";
+      }
+
+      updateCounters();
+    }
+
+    function submitTodo() {
+      var inputField = document.getElementById("new-todo");
+      var newTodoTitle = inputField.value;
+      createTodo(newTodoTitle);
+
+      // reset the value of the inputField to make it empty and ready to create new todos
+      inputField.value = null;
+
+      updateCounters();
+    }
+
+    function createTodo(title) {
+      // create a list item
+      var listItem = document.createElement("li");
+      listItem.className = "todo";
+
+      // create a checkbox and add it to the list item
+      var checkbox = document.createElement("input");
+      checkbox.type = "checkbox";
+      checkbox.id = "todo-" + nextTodoId();
+      checkbox.checked = false;
+      // assign the toggleDone function on the checkbox's onchange event
+      checkbox.onchange = toggleDone.bind(checkbox);
+      listItem.appendChild(checkbox);
+
+      // create some whitespace to put between the checkbox and the label
+      var space = document.createTextNode(" ");
+      listItem.appendChild(space);
+
+      // create a label that holds the title and add it to the list item
+      var label = document.createElement("label");
+      label.htmlFor = checkbox.id;
+      label.innerHTML = title;
+      listItem.appendChild(label);
+
+      // add the list item with the checkbox, the whitespace and the label to
+      // the list
+      var list = document.getElementById("todolist");
+      list.appendChild(listItem);
+    }
+
+    // Every todo has it's own id so we can add that to the corresponding label's
+    // "for" attribute to make sure that when we click the label, the checkbox
+    // toggles
+    function nextTodoId() {
+      return document.getElementsByClassName("todo").length + 1;
+    }
+
   </script>
 
 </body>
